--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "gatsby-starter-advanced",
-  "description":
-    "GatsbyJS starter that includes examples for advanced use cases.",
+  "description": "GatsbyJS starter that includes examples for advanced use cases.",
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
@@ -18,6 +17,7 @@
     "gatsby-plugin-sharp": "^1.6.24",
     "gatsby-plugin-sitemap": "^1.2.9",
     "gatsby-plugin-twitter": "^1.0.14",
+    "gatsby-plugin-typography": "^1.7.13",
     "gatsby-remark-autolink-headers": "^1.4.11",
     "gatsby-remark-copy-linked-files": "^1.5.25",
     "gatsby-remark-images": "^1.5.36",
@@ -32,7 +32,9 @@
     "react-dom": "^15.6.1",
     "react-helmet": "^5.2.0",
     "react-share": "^1.19.0",
-    "react-twitter-widgets": "^1.7.1"
+    "react-twitter-widgets": "^1.7.1",
+    "typography": "^0.16.6",
+    "typography-theme-lincoln": "^0.15.11"
   },
   "devDependencies": {
     "cli-glob": "^0.1.0",
@@ -51,7 +53,9 @@
     "stylelint-config-standard": "^18.0.0",
     "write-good": "^0.11.3"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
@@ -68,6 +72,8 @@
     "format:js": "prettier '**/*.{js,jsx}' --write"
   },
   "remarkConfig": {
-    "plugins": ["remark-preset-lint-recommended"]
+    "plugins": [
+      "remark-preset-lint-recommended"
+    ]
   }
 }
