--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "gatsby-plugin-feed": "^1.3.15",
     "gatsby-plugin-google-analytics": "^1.0.14",
     "gatsby-plugin-manifest": "^1.0.12",
+    "gatsby-plugin-netlify": "^1.0.18",
+    "gatsby-plugin-netlify-cms": "^1.0.7",
     "gatsby-plugin-nprogress": "^1.0.9",
     "gatsby-plugin-offline": "^1.0.12",
     "gatsby-plugin-react-helmet": "^2.0.3",
