--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-disqus-comments": "^1.1.1",
     "react-dom": "^15.6.1",
     "react-helmet": "^5.2.0",
+    "react-load-script": "^0.0.6",
     "react-share": "^1.19.0",
     "react-twitter-widgets": "^1.7.1",
     "typography": "^0.16.6",
